2012-04-19  Araki Ken  <arakiken@users.sf.net>

	* 3.1.0 released.
	  (tag "rel-3_1_0")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.0.

	* x_main_config.c, MLTermPty.c, ml_pty.h, ml_pty_ssh.c,
	  etc/main, etc/main.ja, man/mlterm.1, README.ja:
	  "cipher_list" option is added.

	* kik_debug.c, kik_utmp_sysv.c: Minor fixes.

2012-04-16  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c: Minor fixes.

2012-04-14  Araki Ken  <arakiken@users.sf.net>

	* x_color_manager.[ch], x_draw_str.c, x_main_config.[ch],
	  x_screen.c, x_screen_manager.c:
	  "bd_color" (equivalent to colorBD of xterm) and "ul_color" (equivalent
	  to colorUL of xterm) options are added.

	* kik_str.[ch]: kik_compare_str() which accepts NULL as arguments is added.

	* ml_term.[ch], ml_pty.[ch]:
	  ml_term_flush() and ml_flush_pty() which rarely work is removed.

	* vte.c, x_font_ft.c, xlib/x_font.c, win32/x_font.c, x_draw_str.[ch],
	  x_im_candidate_screen.c, x_im_status_screen.c, x_screen.[ch], x_decsp_font.[ch]:
	  height_to_baseline -> ascent

2012-04-13  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c, x_xic.c: Even if X*LookupString() returnes XBufferOverflow,
	  all input text is received.

	* kik_dialog.[ch]: kik_dialog_style_t is added.

	* win32/x_display.c, win32/x_window.c:
	 - Callback function of kik_dialog is set.
	 - MessageBox is replaced by kik_dialog.

2012-04-12  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c, MLTermPty.java: '\r' characters at end of lines are removed.

2012-04-11  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c: If ssh server is unknown, message box is shown.

	* kiklib/src/Makefile.in, java/Makefile.in: Fixed.

	* ConfirmDialog.java: Added.

	* kik_dialog.[ch]: Added.

	* ml_pty_ssh.c: ~/.ssh/known_hosts or ~/.mlterm/known_hosts are checked.

2012-04-08  Araki Ken  <arakiken@users.sf.net>

	* ml_line_bidi.c: BiDi mirroring is supported.
	  (Thanks to Khaled Hosny)
