@@ -14,6 +14,7 @@
 
 #define  IS_VTSYS_COLOR(color)  ((unsigned int)(color) <= 0xf)  /* same as 0 <= color <= 0xf */
 #define  IS_256_COLOR(color)  (0x10 <= (color) && (color) <= 0xff)
+#define  IS_VALID_COLOR_EXCEPT_FG_BG(color)  ((unsigned int)(color) < 0xff)
 #define  IS_VALID_COLOR(color)  (0x0 <= (color) && (color) < 0x100)
 
 
