@@ -1,4 +1,9 @@
-2012-04-19  Araki Ken  <arakiken@users.sf.net>
+2012-04-22  Araki Ken  <arakiken@users.sf.net>
+
+	* ml_color.[ch], x_color_config.c:
+	  It is possible to change 0-15 colors by OSC 4 sequence.
+
+2012-04-21  Araki Ken  <arakiken@users.sf.net>
 
 	* 3.1.0 released.
 	  (tag "rel-3_1_0")
